[gd_scene load_steps=5 format=2]

[ext_resource path="res://new_player/Player.gd" type="Script" id=1]
[ext_resource path="res://new_player/PlayerFSM.gd" type="Script" id=2]
[ext_resource path="res://new_player/player.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 6 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 10 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 2
frame = 1

[node name="SFX" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="WallRaycasts" type="Node2D" parent="."]
visible = false

[node name="LeftWallRaycasts" type="Node2D" parent="WallRaycasts"]

[node name="RayCast2DUp" type="RayCast2D" parent="WallRaycasts/LeftWallRaycasts"]
position = Vector2( -4, 6 )
enabled = true
cast_to = Vector2( -1, 0 )

[node name="RayCast2DDown" type="RayCast2D" parent="WallRaycasts/LeftWallRaycasts"]
position = Vector2( -4, 14 )
enabled = true
cast_to = Vector2( -1, 0 )

[node name="RightWallRaycasts" type="Node2D" parent="WallRaycasts"]

[node name="RayCast2DUp" type="RayCast2D" parent="WallRaycasts/RightWallRaycasts"]
position = Vector2( 4, 6 )
enabled = true
cast_to = Vector2( 1, 0 )

[node name="RayCast2DDown" type="RayCast2D" parent="WallRaycasts/RightWallRaycasts"]
position = Vector2( 4, 14 )
enabled = true
cast_to = Vector2( 1, 0 )

[node name="Timers" type="Node" parent="."]

[node name="WallSlideCooldown" type="Timer" parent="Timers"]
wait_time = 0.15
one_shot = true

[node name="WallJumpCooldown" type="Timer" parent="Timers"]
wait_time = 0.25
one_shot = true

[node name="WallSlideStickyTimer" type="Timer" parent="Timers"]
wait_time = 0.15
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="JumpBuffer" type="Timer" parent="Timers"]
